
FILE(GLOB TEST_SOURCE_FILES "*.c")

FOREACH(CURRENT_TEST_SOURCE_FILE ${TEST_SOURCE_FILES})
	GET_FILENAME_COMPONENT(CURRENT_TEST_BINARY ${CURRENT_TEST_SOURCE_FILE} NAME_WE)
	STRING(REPLACE "Test" "" CURRENT_TEST ${CURRENT_TEST_BINARY})
	
	ADD_EXECUTABLE(${CURRENT_TEST_BINARY} ${CURRENT_TEST_SOURCE_FILE})
	TARGET_LINK_LIBRARIES(${CURRENT_TEST_BINARY} ${LC_LIB})
	TARGET_INCLUDE_DIRECTORIES(${CURRENT_TEST_BINARY} PUBLIC ${LC_INCLUDE})

	ADD_TEST(${CURRENT_TEST} ${CURRENT_TEST_BINARY})
ENDFOREACH()
